--- a/css/EastBoston_styles.css
+++ b/css/EastBoston_styles.css
@@ -4,7 +4,7 @@ a
 {
   text-decoration: none;
   color: #232323;
-  
+
   transition: color 0.3s ease;
 }
 
@@ -17,7 +17,7 @@ a:hover
  * Black bar with logo
  */
 
-.EastBoston_nav {   
+.EastBoston_nav {
     background-color: black;
     height: 55px;
     background-image: url(../images/EastBoston_logo_final.jpg);
@@ -33,9 +33,9 @@ a:hover
   position: relative;
   top: 18px;
   left: 20px;
-  
+
   z-index: 1;
-  
+
   -webkit-user-select: none;
   user-select: none;
 }
@@ -48,12 +48,12 @@ a:hover
   position: absolute;
   top: -7px;
   left: -5px;
-  
+
   cursor: pointer;
-  
+
   opacity: 0; /* hide this */
   z-index: 2; /* and place it over the hamburger */
-  
+
   -webkit-touch-callout: none;
 }
 
@@ -67,14 +67,14 @@ a:hover
   height: 4px;
   margin-bottom: 5px;
   position: relative;
-  
+
   background: #cdcdcd;
   border-radius: 3px;
-  
+
   z-index: 1;
-  
+
   transform-origin: 4px 0px;
-  
+
   transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
               background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
               opacity 0.55s ease;
@@ -90,7 +90,7 @@ a:hover
   transform-origin: 0% 100%;
 }
 
-/* 
+/*
  * Transform all the slices of hamburger
  * into a crossmark.
  */
@@ -126,16 +126,16 @@ a:hover
   margin: -100px 0 0 -50px;
   padding: 50px;
   padding-top: 125px;
-  
+
   background: #ededed;
     opacity: 0.9;
   list-style-type: none;
   -webkit-font-smoothing: antialiased;
   /* to stop flickering of text in safari */
-  
+
   transform-origin: 0% 0%;
   transform: translate(-100%, 0);
-  
+
   transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
 }
 
@@ -146,7 +146,7 @@ ul#menu li
     font-size: 22px;
     border-bottom: solid 1px #999;
 }
-    
+
 
 /*
  * And let's slide it in from the left
@@ -227,4 +227,18 @@ h6.EastBoston_footer {
 
 span.EastBoston_footer {
     color: orangered;
+}
+
+/* Line Styles
+–––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––– */
+
+.line {
+    fill: none;
+    stroke: #ffab00;
+    stroke-width: 3;
+}
+
+.dot {
+    fill: #ffab00;
+    stroke: #fff;
 }
