"added base map"

--- a/css/EastBoston_styles.css
+++ b/css/EastBoston_styles.css
@@ -242,3 +242,11 @@ span.EastBoston_footer {
     fill: "black";
     stroke: #fff;
 }
+
+/* Map Styles
+–––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––– */
+
+#basemap path {
+  fill: gray;
+  stroke: black;
+}
